# polytomic-mcp

./: LICENSE  README.md  pyproject.toml
src/polytomic_mcp/: __init__.py  server.py
