[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "polytomic-mcp"
version = "1.0.0"
description = "MCP server for Polytomic API integration"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
polytomic-mcp = "polytomic_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/polytomic_mcp"]
